--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ oauth2client==4.1.3
 joblib==1.4.2
 tqdm==4.66.1
 pytz==2025.1
-python-dateutil==2.9.1
+python-dateutil==2.9.0.post0
 pyyaml==6.0
 
 # Optional logging & visualization
